--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,16 +1,22 @@
+<p>
+<%= button_to "Logout", "/sessions/logout", method: :delete %>
+</p>
+
 <h1><%= @place.name %></h1>
 
-<h2>My Posts</h2>
-<% for post in @place.posts %>
+
+  <h2>My Posts</h2>
+  <% for post in @place.posts %>
   <h3><%= post.title %></h3>
   <h4><%= post.posted_on %></h4>
   <p><%= post.description %></p>
-<% end %>
+  <% end %>
 
-<p>
-  <a href="/posts/new?place_id=<%= @place.id %>">New Post</a>
-</p>
+  <p>
+    <a href="/posts/new?place_id=<%= @place.id %>">New Post</a>
+  </p>
 
-<p>
-  <a href="/places">Back to All Places</a>
+
+  <p>
+    <a href="/places">Back to All Places</a>
 </p>
