--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,3 @@
-<p>
-<%= button_to "Logout", "/sessions/logout", method: :delete %>
-</p>
 
 <h1><%= @place.name %></h1>
 
@@ -20,3 +17,5 @@
   <p>
     <a href="/places">Back to All Places</a>
 </p>
+
+<p><%= button_to "Delete this place", @place, method: :delete %></p>
