--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,7 @@
 
 <h1><%= @place.name %></h1>
 
-
+<% if @current_user %>
   <h2>My Posts</h2>
   <% for post in @place.posts %>
   <h3><%= post.title %></h3>
@@ -16,6 +16,7 @@
 
   <p>
     <a href="/places">Back to All Places</a>
-</p>
+  </p>
 
-<p><%= button_to "Delete this place", @place, method: :delete %></p>
+  <p><%= button_to "Delete this place", @place, method: :delete %></p>
+<% end %>
