--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,21 +2,28 @@
 
 <% if @current_user %>
   <%= form_with model: @post do |form| %>
-    <p>
-      <%= form.label "title" %>
-      <%= form.text_field "title" %>
-    </p>
-    <p>
-      <%= form.label "description" %>
-      <%= form.text_field "description" %>
-    </p>
-    <p>
-      <%= form.label "posted_on" %>
-      <%= form.date_field "posted_on" %>
-    </p>
-    <p>
-      <%= form.submit %>
-    </p>
-    <%= form.hidden_field "place_id" %>
+    <div class="mb-3">
+      <%= form.label "title", class: "form-label" %>
+      <%= form.text_field "title", class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label "description", class: "form-label" %>
+      <%= form.text_field "description", class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label "posted_on", class: "form-label" %>
+      <%= form.date_field "posted_on", class: "form-control" %>
+    </div>
+
+    <div class="mb-3">
+      <%= form.label "uploaded_image", class: "form-label" %>
+      <%= form.file_field "uploaded_image", accept: "image/png,image/jpg,image/jpeg", class: "form-control" %>
+    </div>
+
+    <%= form.submit "Create Post", class: "btn btn-primary" %>
   <% end %>
+<% else %>
+  You must first <a href="/sessions/new">login</a> to post.
 <% end %>
