--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,44 @@
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
-  <body>
-    <p>
-      <% if @current_user %>
-        <%= @current_user.username %>
-        <%= button_to "Logout", "/sessions/logout", method: :delete %>
-      <% else %>
-        <a href="/sessions/new">Login</a> | <a href="/users/new">Signup</a>
-      <% end %>
-    </p>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+        </ul>
+        
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <% if @current_user %>
+            <li class="nav-item">Logged in as: <%= @current_user.username %></li>
+            <li class="nav-item"><%= button_to "Logout", "/sessions/logout", method: :delete, class: "nav-link" %></li>
+          <% else %>
+            <li class="nav-item"><a href="/sessions/new" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+          <% end %>
+        </div>
+  
+      </div>
+    </div>
+  </nav>
 
-    <p>
-      <%= flash[:notice] %>
-    </p>
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col text-center">
+        <%= flash[:notice] %>
+      </div>
+    </div>
 
     <%= yield %>
+
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
