--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @place.name %></h1>
 
 <p>
-  <a href="/posts/new?place_id=<%= @place.id %>">New Post</a>
+  <a href="/posts/new?place_id=<%= @place.id%>"> New Post</a>
 </p>
 
 <% if @current_user %>
@@ -10,7 +10,14 @@
   <h3><%= post.title %></h3>
   <h4><%= post.posted_on %></h4>
   <p><%= post.description %></p>
+
+  <% if post.uploaded_image.attached? %>
+    <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
+  <% else %>
+    <img src="<%= post.image %>" class="img-fluid">
   <% end %>
+  
+<% end %>
 
   <p>
     <a href="/places">Back to All Places</a>
