--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,8 +9,8 @@
         <% end %>
       </h4>
 
-      <% if post.uploaded_image.attached? %>
-        <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
+      <% if post.image.attached? %>
+        <img src="<%= url_for(post.image) %>" class="img-fluid">
       <% else %>
         <img src="<%= post.image %>" class="img-fluid">
       <% end %>
