--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -21,8 +21,10 @@
       <%= form.label "uploaded_image", class: "form-label" %>
       <%= form.file_field "uploaded_image", accept: "image/png,image/jpg,image/jpeg", class: "form-control" %>
     </div>
-
+    
+    <%= form.hidden_field "place_id" %>
     <%= form.submit "Create Post", class: "btn btn-primary" %>
+
   <% end %>
 <% else %>
   You must first <a href="/sessions/new">login</a> to post.
