--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Places</h1>
 
+<p>
+<a href="/places/new"><button type="button" class="btn btn-outline-secondary">New Place</button></a>
+</p>
+
 <ul>
   <% for place in @places %>
     <li><a href="/places/<%= place.id %>"><%= place.name %></a></li>
   <% end %>
 </ul>
-
-<p>
-  <a href="/places/new">New place</a>
-</p>
