--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,29 +1,34 @@
+<div class="container"> 
+  <div class="row">
+    <h1><%= @place.name %></h1>
 
-<h1><%= @place.name %></h1>
+    <p>
+      <a href="/posts/new?place_id=<%= @place.id%>"> <button type="button" class="btn btn-outline-secondary">New Post</button></a>
+    </p>
 
-<p>
-  <a href="/posts/new?place_id=<%= @place.id%>"> <button type="button" class="btn btn-outline-secondary">New Post</button></a>
-</p>
 
-<% if @current_user %>
-  <% for post in @place.posts %>
-  <h3><%= post.title %></h3>
-  <h4><%= post.posted_on %></h4>
-  
+    <% if @current_user %>
+      <div class="col-md-3 col-sm-6">
+      <% for post in @place.posts %>
+      <h3><%= post.title %></h3>
+      <h4><%= post.posted_on %></h4>
+      
 
-  <% if post.uploaded_image.attached? %>
-    <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
-  <% else %>
-    <img src="<%= post.image %>" class="img-fluid">
-  <% end %>
+      <% if post.uploaded_image.attached? %>
+        <img src="<%= url_for(post.uploaded_image) %>" class="img-fluid">
+      <% else %>
+        <img src="<%= post.image %>" class="img-fluid">
+      <% end %>
 
-  <p><%= post.description %></p>
-  
-<% end %>
+      <p><%= post.description %></p>
+      
+    <% end %>
 
-  <p>
-    <a href="/places">Back to All Places</a>
-  </p>
+      <p>
+        <a href="/places">Back to All Places</a>
+      </p>
 
-  <p><%= button_to "Delete this place", @place, method: :delete %></p>
-<% end %>
+      <p><%= button_to "Delete this place", @place, method: :delete %></p>
+    <% end %>
+  </div>
+</div>
