--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,16 +3,32 @@
     <a href="/posts/new?place_id=<%= @place.id%>"> <button type="button" class="btn btn-outline-secondary">New Post</button></a>
   </p>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 col-sm-6">
-    Column
-    </div>
-    <div class="col-md-3 col-sm-6">
-      Column
-    </div>
-    <div class="col-md-3 col-sm-6">
-      Column
-    </div>
-  </div>
+
+<% if @current_user %>
+
+<div class="row pt-4">
+  <% for post in @place.posts %>
+      <div class="col-sm-4 pt-4 pb-4">
+
+      <div class="col text-center">
+        <h5><%= "#{post.title}" %></h5> 
+        <%= "#{post.posted_on}" %> 
+      
+      <% if post.uploaded_image.attached? %>
+        <img src="<%= url_for(post.uploaded_image)%>" class="img-fluid">
+      <% else %>
+      <% end %>
+      
+      <p>
+      <%= "#{post.description}" %>
+      </p>
+           </div>  
+      </div>
+  <% end %>
 </div>
+
+  <p>
+    <a href="/places"><button type="button" class="btn btn-outline-secondary">Back to All Places</button></a>
+  </p>
+
+<% end %>
