Close to final changes (w/ auth fixed)

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Places</h1>
+<h1 class="text-uppercase text-left pt-2">Places</h1>
 
 <p>
 <a href="/places/new"><button type="button" class="btn btn-outline-secondary">New Place</button></a>
