--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -6,6 +6,6 @@
     <%= form.text_field "name" %>
   </p>
   <p>
-    <%= form.submit %>
+    <button type="submit" class="btn btn-outline-secondary">Create</button>
   </p>
 <% end %>
