--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @place.name %></h1>
+<h1 class="text-uppercase text-left pt-2"><%= @place.name %></h1>
   <p>
     <a href="/posts/new?place_id=<%= @place.id%>"> <button type="button" class="btn btn-outline-secondary">New Post</button></a>
   </p>
@@ -7,7 +7,7 @@
 <% if @current_user %>
 
 <div class="row pt-4">
-  <% for post in @place.posts %>
+  <% for post in @place.posts.where({ user_id: session[:user_id] }) %>
       <div class="col-sm-4 pt-4 pb-4">
 
       <div class="col text-center">
